feat(contents):  add migration and  add repository & unit of work abstractions and Ef impl.

--- a/src/ContentService/ContentService.Api/appsettings.json
+++ b/src/ContentService/ContentService.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Db": "Host=localhost;Port=5432;Database=contents;Username=postgres;Password=postgres"
+  },
   "AllowedHosts": "*"
 }
