feat(security): add JWT auth, password hashing (DIP), AdminOnly policy, rate limiting and swagger bearer

--- a/src/UserService/UserService.Api/appsettings.json
+++ b/src/UserService/UserService.Api/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "Db": "Host=localhost;Port=5432;Database=users;Username=postgres;Password=postgres"
   },
+  "Jwt": {
+    "Issuer": "cmspoc",
+    "Audience": "cmspoc.clients",
+    "Key": "P@ssw0rd!_ThisIsA_DevOnly_Key_ChangeMe_1234567890abcd",
+    "AccessTokenMinutes": 30
+  },
   "AllowedHosts": "*"
 }
