feat(observability): add global exception handler, correlation id and Serilog request logging

--- a/src/ContentService/ContentService.Api/ContentService.Api.csproj
+++ b/src/ContentService/ContentService.Api/ContentService.Api.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\BuildingBlocks\Shared.Web\Shared.Web.csproj" />
     <ProjectReference Include="..\ContentService.Application\ContentService.Application.csproj" />
     <ProjectReference Include="..\ContentService.Infrastructure\ContentService.Infrastructure.csproj" />
   </ItemGroup>
