feat(caching): add shared Redis cache + CQRS caching behaviors; refactor APIs to PagedResult; add global exception & correlation logging; update controllers; add Postman collection

--- a/src/ContentService/ContentService.Api/appsettings.json
+++ b/src/ContentService/ContentService.Api/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "Db": "Host=localhost;Port=5432;Database=contents;Username=postgres;Password=postgres"
   },
+  "Redis": {
+    "Connection": "localhost:6379",
+    "Instance": "contents"
+  },
   "AllowedHosts": "*"
 }
