--- a/src/UserService/UserService.Api/appsettings.json
+++ b/src/UserService/UserService.Api/appsettings.json
@@ -14,5 +14,9 @@
     "Key": "P@ssw0rd!_ThisIsA_DevOnly_Key_ChangeMe_1234567890abcd",
     "AccessTokenMinutes": 30
   },
+  "Redis": {
+    "Connection": "localhost:6379",
+    "Instance": "users"
+  },
   "AllowedHosts": "*"
 }
