--- a/src/BuildingBlocks/Shared.Web/Shared.Web.csproj
+++ b/src/BuildingBlocks/Shared.Web/Shared.Web.csproj
@@ -9,5 +9,6 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="Serilog" Version="3.*" />
+    <PackageReference Include="StackExchange.Redis" Version="2.9.11" />
   </ItemGroup>
 </Project>
