--- a/src/ContentService/ContentService.Infrastructure/ContentService.Infrastructure.csproj
+++ b/src/ContentService/ContentService.Infrastructure/ContentService.Infrastructure.csproj
@@ -15,10 +15,10 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
-    <PackageReference Include="StackExchange.Redis" Version="2.8.58" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\BuildingBlocks\Shared.Web\Shared.Web.csproj" />
     <ProjectReference Include="..\ContentService.Application\ContentService.Application.csproj" />
     <ProjectReference Include="..\ContentService.Domain\ContentService.Domain.csproj" />
   </ItemGroup>
