feat(contents): add UsersClient with Polly + service token provider; enrich content DTOs with author display name

--- a/src/ContentService/ContentService.Api/appsettings.json
+++ b/src/ContentService/ContentService.Api/appsettings.json
@@ -12,5 +12,18 @@
     "Connection": "localhost:6379",
     "Instance": "contents"
   },
+  "Jwt": {
+    "Issuer": "cmspoc",
+    "Audience": "cmspoc.clients",
+    "Key": "P@ssw0rd!_DevOnly_Key_ChangeMe_1234567890abcd",
+    "AccessTokenMinutes": 30
+  },
+  "Users": {
+    "BaseUrl": "https://localhost:7146",
+    "ServiceAccount": {
+      "Email": "admin@cms.local",
+      "Password": "P@ssw0rd!"
+    }
+  },
   "AllowedHosts": "*"
 }
