--- a/src/UserService/UserService.Api/appsettings.Development.json
+++ b/src/UserService/UserService.Api/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Issuer": "cmspoc",
+    "Audience": "cmspoc.clients",
+    "Key": "P@ssw0rd!_DevOnly_Key_ChangeMe_1234567890abcd",
+    "AccessTokenMinutes": 30
   }
 }
