--- a/src/BuildingBlocks/Shared.Web/Shared.Web.csproj
+++ b/src/BuildingBlocks/Shared.Web/Shared.Web.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.19" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.1" />
     <PackageReference Include="Serilog" Version="3.*" />
     <PackageReference Include="StackExchange.Redis" Version="2.9.11" />
   </ItemGroup>
