--- a/src/ContentService/ContentService.Api/appsettings.Development.json
+++ b/src/ContentService/ContentService.Api/appsettings.Development.json
@@ -1,8 +1,28 @@
 {
+  "ConnectionStrings": {
+    "Db": "Host=localhost;Port=5432;Database=contents;Username=postgres;Password=postgres"
+  },
+  "Redis": {
+    "Connection": "localhost:6379",
+    "Instance": "contents"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "Jwt": {
+    "Issuer": "cmspoc",
+    "Audience": "cmspoc.clients",
+    "Key": "P@ssw0rd!_DevOnly_Key_ChangeMe_1234567890abcd",
+    "AccessTokenMinutes": 30
+  },
+  "Users": {
+    "BaseUrl": "https://localhost:7146",
+    "ServiceAccount": {
+      "Email": "admin@cms.local",
+      "Password": "P@ssw0rd!"
     }
   }
 }
