feat(docs): Swagger TR dokümantasyon (annotations, XML comments, Bearer, controller açıklamaları)

--- a/src/ContentService/ContentService.Api/appsettings.Development.json
+++ b/src/ContentService/ContentService.Api/appsettings.Development.json
@@ -24,5 +24,8 @@
       "Email": "admin@cms.local",
       "Password": "P@ssw0rd!"
     }
+  },
+  "Loki": {
+    "Url": "http://localhost:3100"
   }
 }
