--- a/src/UserService/UserService.Api/appsettings.Development.json
+++ b/src/UserService/UserService.Api/appsettings.Development.json
@@ -10,5 +10,8 @@
     "Audience": "cmspoc.clients",
     "Key": "P@ssw0rd!_DevOnly_Key_ChangeMe_1234567890abcd",
     "AccessTokenMinutes": 30
+  },
+  "Loki": {
+    "Url": "http://localhost:3100"
   }
 }
