--- a/src/UserService/UserService.Api/appsettings.json
+++ b/src/UserService/UserService.Api/appsettings.json
@@ -18,5 +18,8 @@
     "Connection": "localhost:6379",
     "Instance": "users"
   },
+  "Loki": {
+    "Url": "http://localhost:3100"
+  },
   "AllowedHosts": "*"
 }
