feat(observability): Serilog→Loki entegrasyonu, korelasyon kimliği ve JWT izleri. Docker-compose.

--- a/src/ContentService/ContentService.Api/appsettings.json
+++ b/src/ContentService/ContentService.Api/appsettings.json
@@ -6,11 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Db": "Host=localhost;Port=5432;Database=contents;Username=postgres;Password=postgres"
-  },
-  "Redis": {
-    "Connection": "localhost:6379",
-    "Instance": "contents"
+    "Db": "Host=localhost;Port=5432;Database=users;Username=postgres;Password=postgres"
   },
   "Jwt": {
     "Issuer": "cmspoc",
@@ -18,12 +14,13 @@
     "Key": "P@ssw0rd!_DevOnly_Key_ChangeMe_1234567890abcd",
     "AccessTokenMinutes": 30
   },
-  "Users": {
-    "BaseUrl": "https://localhost:7146",
-    "ServiceAccount": {
-      "Email": "admin@cms.local",
-      "Password": "P@ssw0rd!"
-    }
+  "Redis": {
+    "Configuration": "redis:6379,abortConnect=false",
+    "InstanceName": "cmspoc:",
+    "DefaultTtlSeconds": 60
+  },
+  "Caching": {
+    "Enabled": true
   },
   "Loki": {
     "Url": "http://localhost:3100"
