--- a/src/UserService/UserService.Api/appsettings.Development.json
+++ b/src/UserService/UserService.Api/appsettings.Development.json
@@ -5,11 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Db": "Host=localhost;Port=5432;Database=users;Username=postgres;Password=postgres"
+  },
   "Jwt": {
     "Issuer": "cmspoc",
     "Audience": "cmspoc.clients",
     "Key": "P@ssw0rd!_DevOnly_Key_ChangeMe_1234567890abcd",
     "AccessTokenMinutes": 30
+  },
+  "Redis": {
+    "Configuration": "redis:6379,abortConnect=false",
+    "InstanceName": "cmspoc:",
+    "DefaultTtlSeconds": 60
+  },
+  "Caching": {
+    "Enabled": true
   },
   "Loki": {
     "Url": "http://localhost:3100"
