--- a/src/UserService/UserService.Api/appsettings.json
+++ b/src/UserService/UserService.Api/appsettings.json
@@ -15,8 +15,12 @@
     "AccessTokenMinutes": 30
   },
   "Redis": {
-    "Connection": "localhost:6379",
-    "Instance": "users"
+    "Configuration": "redis:6379,abortConnect=false",
+    "InstanceName": "cmspoc:",
+    "DefaultTtlSeconds": 60
+  },
+  "Caching": {
+    "Enabled": true
   },
   "Loki": {
     "Url": "http://localhost:3100"
