--- a/src/ContentService/ContentService.Api/appsettings.Development.json
+++ b/src/ContentService/ContentService.Api/appsettings.Development.json
@@ -3,8 +3,12 @@
     "Db": "Host=localhost;Port=5432;Database=contents;Username=postgres;Password=postgres"
   },
   "Redis": {
-    "Connection": "localhost:6379",
-    "Instance": "contents"
+    "ConnectionString": "localhost:6379,abortConnect=false,connectRetry=5,connectTimeout=5000",
+    "InstanceName": "cmspoc:",
+    "DefaultTtlSeconds": 300
+  },
+  "Caching": {
+    "Enabled": true
   },
   "Logging": {
     "LogLevel": {
