--- a/tests/ContentService.UnitTests/ContentService.UnitTests.csproj
+++ b/tests/ContentService.UnitTests/ContentService.UnitTests.csproj
@@ -5,6 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <CollectCoverage>true</CollectCoverage>
+    <CoverletOutputFormat>cobertura,lcov</CoverletOutputFormat>
   </PropertyGroup>
 
   <ItemGroup>
